Updated HTML file.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang=en-us>
   <head>
+    <script src="//game-cdn.poki.com/scripts/v2/poki-sdk.js"></script>
     <meta charset=utf-8>
     <meta http-equiv=Content-Type content="text/html; charset=utf-8">
 	<meta name=viewport content="width=device-width,user-scalable=no,initial-scale=1,target-densitydpi=device-dpi">
@@ -50,8 +51,7 @@
     <script src="https://connect.facebook.net/en_US/fbinstant.6.3.js"></script>
 GIDEROS-FBINSTANT-END -->
     <script src=gidloader.js></script>
-    <script async >
-JPZLoad('gideros-wasm.wasm.gidz',function(c) { Module.wasmBinary=c; JPZLoad('gideros-wasm.js.gidz',eval); },"array");</script>
+    <script async src=gideros-wasm.js></script>
   </body>
 </html>
 
