Updates in accordance to: https://www.notion.so/Zomball-4cf62dba1eed4a6e8181f363bef1fe0b

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href=favicon.png rel=icon>
     <title>Zomball</title>
   </head>
-  <body class="fullscreen toplevel" style="background-color:#ffffff;">
+  <body class="fullscreen toplevel" style="background-color:#540064;">
     <div id=infopane class="fullscreen flex">
     <figure style=overflow:visible id=spinner>
     <img src=gideros.png>   
@@ -50,9 +50,14 @@
 <!-- GIDEROS-FBINSTANT-START
     <script src="https://connect.facebook.net/en_US/fbinstant.6.3.js"></script>
 GIDEROS-FBINSTANT-END -->
+  <div id="status" class=status>
+
     <script src=gidloader.js></script>
     <script async >
 JPZLoad('gideros-wasm.wasm.gidz',function(c) { Module.wasmBinary=c; JPZLoad('gideros-wasm.js.gidz',eval); },"array");</script>
+
+  </div>
+
   </body>
 </html>
 
